# Haskell

./: haskell-project.cabal
.stack-work/install/93264ba9/doc/: doc-index.html  index-frames.html  index.html
.stack-work/install/93264ba9/doc/all/: doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-43.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-92.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Y.html  doc-index-Z.html  index-frames.html  index.html
.stack-work/install/93264ba9/doc/haskell-project-0.1.0.0/: Dequeue.html  List.html  index-frames.html  index.html  mini_List.html
.stack-work/install/93264ba9/flag-cache/: QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  haskell-project-0.1.0.0-5Es4tyKn8MvJMz7gO0MiNB  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  random-1.1-54KmMHXjttlERYcr1mvsAe  tf-random-0.5-4z8OJUaXC1FRNfrLPFWAD
.stack-work/install/93264ba9/pkgdb/: haskell-project-0.1.0.0-40Qus2qNav6FY2bGilXhPo.conf  package.cache
app/: Main.hs
project/: project.cabal
src/: Dequeue.hs  List.hs  Project.hs  Queue.hs
src/Tests/: DequeueTest.hs
test/: DequeueTest.hs
(+10 files in other folders)
