name:                haskell-project
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Elrohil44/Haskell
license:             BSD3
license-file:        LICENSE
author:              Wiesław Stanek
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Project,
                       List,
                       Dequeue,
                       Queue,
                       Tests.DequeueTest
  build-depends:       base >= 4.7 && < 5
                      ,QuickCheck
  default-language:    Haskell2010

executable haskell-project-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-project
  default-language:    Haskell2010

test-suite haskell-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-project
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Elrohil44/Haskell
